[gd_scene load_steps=143 format=2]

[ext_resource path="res://Scripts/main_character_controller.gd" type="Script" id=1]
[ext_resource path="res://Scripts/main_character_state_machine.gd" type="Script" id=2]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060001.png" type="Texture" id=3]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060002.png" type="Texture" id=4]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060003.png" type="Texture" id=5]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060004.png" type="Texture" id=6]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060005.png" type="Texture" id=7]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060006.png" type="Texture" id=8]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060007.png" type="Texture" id=9]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060008.png" type="Texture" id=10]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060009.png" type="Texture" id=11]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060010.png" type="Texture" id=12]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060011.png" type="Texture" id=13]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060012.png" type="Texture" id=14]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060013.png" type="Texture" id=15]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060014.png" type="Texture" id=16]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060015.png" type="Texture" id=17]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060016.png" type="Texture" id=18]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060017.png" type="Texture" id=19]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060018.png" type="Texture" id=20]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060019.png" type="Texture" id=21]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060020.png" type="Texture" id=22]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060021.png" type="Texture" id=23]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060022.png" type="Texture" id=24]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060023.png" type="Texture" id=25]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060024.png" type="Texture" id=26]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060025.png" type="Texture" id=27]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060026.png" type="Texture" id=28]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060027.png" type="Texture" id=29]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060028.png" type="Texture" id=30]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060029.png" type="Texture" id=31]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060030.png" type="Texture" id=32]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060031.png" type="Texture" id=33]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060032.png" type="Texture" id=34]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060033.png" type="Texture" id=35]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060034.png" type="Texture" id=36]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060035.png" type="Texture" id=37]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060036.png" type="Texture" id=38]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060037.png" type="Texture" id=39]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060038.png" type="Texture" id=40]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060039.png" type="Texture" id=41]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060040.png" type="Texture" id=42]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060041.png" type="Texture" id=43]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060042.png" type="Texture" id=44]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060043.png" type="Texture" id=45]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060044.png" type="Texture" id=46]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060045.png" type="Texture" id=47]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060046.png" type="Texture" id=48]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Idle/The_Game__2020_01_060047.png" type="Texture" id=49]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060001.png" type="Texture" id=50]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060002.png" type="Texture" id=51]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060003.png" type="Texture" id=52]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060004.png" type="Texture" id=53]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060005.png" type="Texture" id=54]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060006.png" type="Texture" id=55]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060007.png" type="Texture" id=56]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060008.png" type="Texture" id=57]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060009.png" type="Texture" id=58]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060010.png" type="Texture" id=59]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060011.png" type="Texture" id=60]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060012.png" type="Texture" id=61]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Damage/The_Game__2020_01_060013.png" type="Texture" id=62]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060001.png" type="Texture" id=63]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060002.png" type="Texture" id=64]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060003.png" type="Texture" id=65]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060004.png" type="Texture" id=66]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060005.png" type="Texture" id=67]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060006.png" type="Texture" id=68]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060007.png" type="Texture" id=69]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060008.png" type="Texture" id=70]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060009.png" type="Texture" id=71]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060010.png" type="Texture" id=72]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060011.png" type="Texture" id=73]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060012.png" type="Texture" id=74]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060013.png" type="Texture" id=75]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060014.png" type="Texture" id=76]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060015.png" type="Texture" id=77]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060016.png" type="Texture" id=78]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060017.png" type="Texture" id=79]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060018.png" type="Texture" id=80]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060019.png" type="Texture" id=81]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060020.png" type="Texture" id=82]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060021.png" type="Texture" id=83]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060022.png" type="Texture" id=84]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060023.png" type="Texture" id=85]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Walk/Walk/The_Game__2020_01_060024.png" type="Texture" id=86]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060001.png" type="Texture" id=87]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060002.png" type="Texture" id=88]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060003.png" type="Texture" id=89]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060004.png" type="Texture" id=90]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060005.png" type="Texture" id=91]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060006.png" type="Texture" id=92]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060007.png" type="Texture" id=93]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060008.png" type="Texture" id=94]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060009.png" type="Texture" id=95]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060010.png" type="Texture" id=96]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060011.png" type="Texture" id=97]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060012.png" type="Texture" id=98]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060013.png" type="Texture" id=99]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060014.png" type="Texture" id=100]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060015.png" type="Texture" id=101]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060016.png" type="Texture" id=102]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060017.png" type="Texture" id=103]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060018.png" type="Texture" id=104]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060019.png" type="Texture" id=105]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060020.png" type="Texture" id=106]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Death/The_Game__2020_01_060021.png" type="Texture" id=107]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060001.png" type="Texture" id=108]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060002.png" type="Texture" id=109]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060003.png" type="Texture" id=110]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060004.png" type="Texture" id=111]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060005.png" type="Texture" id=112]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060006.png" type="Texture" id=113]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060007.png" type="Texture" id=114]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060008.png" type="Texture" id=115]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060009.png" type="Texture" id=116]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060010.png" type="Texture" id=117]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060011.png" type="Texture" id=118]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060012.png" type="Texture" id=119]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Run/The_Game__2020_01_060013.png" type="Texture" id=120]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Strong/The_Game__2020_01_060001.png" type="Texture" id=121]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Strong/The_Game__2020_01_060002.png" type="Texture" id=122]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Strong/The_Game__2020_01_060003.png" type="Texture" id=123]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Strong/The_Game__2020_01_060004.png" type="Texture" id=124]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Strong/The_Game__2020_01_060005.png" type="Texture" id=125]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Strong/The_Game__2020_01_060006.png" type="Texture" id=126]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Strong/The_Game__2020_01_060007.png" type="Texture" id=127]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Strong/The_Game__2020_01_060008.png" type="Texture" id=128]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Strong/The_Game__2020_01_060009.png" type="Texture" id=129]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Jump/Jump - Up/The_Game__2020_01_060006.png" type="Texture" id=130]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Jump/Jump - Down/The_Game__2020_01_060019.png" type="Texture" id=131]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Quick/The_Game__2020_01_060001.png" type="Texture" id=132]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Quick/The_Game__2020_01_060002.png" type="Texture" id=133]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Quick/The_Game__2020_01_060003.png" type="Texture" id=134]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Quick/The_Game__2020_01_060004.png" type="Texture" id=135]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Quick/The_Game__2020_01_060005.png" type="Texture" id=136]
[ext_resource path="res://assets/Sprites/Characters/Huvudkaraktar/Attack - Quick/The_Game__2020_01_060006.png" type="Texture" id=137]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": true,
"name": "idle",
"speed": 24.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ) ],
"loop": false,
"name": "take_damage",
"speed": 26.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ) ],
"loop": true,
"name": "walk",
"speed": 24.0
}, {
"frames": [ ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ) ],
"loop": false,
"name": "death",
"speed": 24.0
}, {
"frames": [ ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 119 ), ExtResource( 120 ) ],
"loop": true,
"name": "run",
"speed": 24.0
}, {
"frames": [ ExtResource( 121 ), ExtResource( 122 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 125 ), ExtResource( 126 ), ExtResource( 127 ), ExtResource( 128 ), ExtResource( 129 ) ],
"loop": false,
"name": "attack_strong",
"speed": 20.0
}, {
"frames": [ ExtResource( 130 ) ],
"loop": true,
"name": "jump",
"speed": 1.0
}, {
"frames": [ ExtResource( 131 ) ],
"loop": true,
"name": "fall",
"speed": 1.0
}, {
"frames": [ ExtResource( 132 ), ExtResource( 133 ), ExtResource( 134 ), ExtResource( 135 ), ExtResource( 136 ), ExtResource( 137 ) ],
"loop": false,
"name": "attack_quick",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.352, 29.2566 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 61.1688, 13.8633 )

[sub_resource type="CircleShape2D" id=4]
radius = 65.8128

[sub_resource type="CapsuleShape2D" id=5]
radius = 46.3069
height = 46.5952

[node name="MainCharacter" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 1 )

[node name="PlayerStateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Body"]
position = Vector2( 56, -178.075 )
frames = SubResource( 1 )
animation = "attack_strong"
frame = 6

[node name="PhysicsShape" type="CollisionShape2D" parent="."]
position = Vector2( -1.18, -40.077 )
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 2 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 32 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
position = Vector2( -28, 32 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="RayCast2D3" type="RayCast2D" parent="Raycasts"]
position = Vector2( 25.7, 32 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 3

[node name="InvlunerabilityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="QuickAttack" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Time_to_QuickAttack" type="Timer" parent="."]
wait_time = 0.165
one_shot = true

[node name="StrongAttack" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Time_to_StrongAttack" type="Timer" parent="."]
wait_time = 0.29
one_shot = true

[node name="Time_to_dead" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="PhysicsShape" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.18, -40.077 )
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 2 )

[node name="Quick_Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quick_Attack"]
position = Vector2( 54, -11.289 )
shape = SubResource( 3 )
disabled = true

[node name="Strong_Attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Strong_Attack"]
position = Vector2( 43.9416, -82.0882 )
shape = SubResource( 4 )
disabled = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Strong_Attack"]
position = Vector2( 85, -31 )
shape = SubResource( 5 )
disabled = true
[connection signal="timeout" from="InvlunerabilityTimer" to="." method="_on_InvlunerabilityTimer_timeout"]
[connection signal="timeout" from="QuickAttack" to="." method="_on_QuickAttack_timeout"]
[connection signal="timeout" from="Time_to_QuickAttack" to="." method="_on_Time_to_QuickAttack_timeout"]
[connection signal="timeout" from="StrongAttack" to="." method="_on_StrongAttack_timeout"]
[connection signal="timeout" from="Time_to_StrongAttack" to="." method="_on_Time_to_StrongAttack_timeout"]
[connection signal="timeout" from="Time_to_dead" to="." method="_on_Time_to_dead_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
